// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`alarms-list-row-instructions-icon Renders \`alarms-list-row-instructions-icon\` with all auto instructions successful 1`] = `
<c-simple-tooltip-stub
  content="<span class=\\"pre-wrap\\">Automatic instructions <strong>Instruction 1, Instruction 2</strong> is successful</span>"
  top=""
>
  <i
    aria-hidden="true"
    class="v-icon notranslate instruction-icon material-icons theme--light instruction-icon--completed"
    style="font-size: 22px;"
  >
    assignment
  </i>
</c-simple-tooltip-stub>
`;

exports[`alarms-list-row-instructions-icon Renders \`alarms-list-row-instructions-icon\` with auto instruction running 1`] = `
<c-simple-tooltip-stub
  content="<span class=\\"pre-wrap\\">Automatic instructions <strong>Instruction 1, Instruction 2</strong> in progress</span>"
  top=""
>
  <i
    aria-hidden="true"
    class="v-icon notranslate instruction-icon material-icons theme--light blinking instruction-icon--dotted"
    style="font-size: 22px;"
  >
    assignment
  </i>
</c-simple-tooltip-stub>
`;

exports[`alarms-list-row-instructions-icon Renders \`alarms-list-row-instructions-icon\` with default props 1`] = `
<c-simple-tooltip-stub
  content="<span class=\\"pre-wrap\\"></span>"
  top=""
>
  <span
    aria-hidden="true"
    class="v-icon notranslate instruction-icon theme--light"
    style="font-size: 22px; height: 22px; width: 22px;"
  >
    <svg
      class="v-icon__component theme--light"
      fill="none"
      style="font-size: 22px; height: 22px; width: 22px;"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0_8821_52891)"
      >
        <path
          d="M19 3H14.82C14.4 1.84 13.3 1 12 1C10.7 1 9.6 1.84 9.18 3H5C3.9 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1
      21 21 20.1 21 19V5C21 3.9 20.1 3 19 3ZM12 5C11.45 5 11 4.55 11 4C11 3.45 11.45 3 12 3C12.55 3 13 3.45 13 4C13
      4.55 12.55 5 12 5Z"
          fill="currentColor"
        />
        <g
          clip-path="url(#clip1_8821_52891)"
        >
          <path
            d="M16.5 8.75V16C16.5 17.1 15.6 18 14.5 18H10.85C10.31 18 9.8 17.785 9.425 17.405L5.5 13.415C5.5 13.415 6.13
        12.8 6.15 12.79C6.26 12.695 6.395 12.645 6.545 12.645C6.655 12.645 6.755 12.675 6.845 12.725C6.865 12.73 9
        13.955 9 13.955V8C9 7.585 9.335 7.25 9.75 7.25C10.165 7.25 10.5 7.585 10.5 8V11.5H11V6.75C11 6.335 11.335
        6 11.75 6C12.165 6 12.5 6.335 12.5 6.75V11.5H13V7.25C13 6.835 13.335 6.5 13.75 6.5C14.165 6.5 14.5 6.835
        14.5 7.25V11.5H15V8.75C15 8.335 15.335 8 15.75 8C16.165 8 16.5 8.335 16.5 8.75Z"
            fill="white"
          />
        </g>
      </g>
    </svg>
  </span>
</c-simple-tooltip-stub>
`;

exports[`alarms-list-row-instructions-icon Renders \`alarms-list-row-instructions-icon\` with failed instruction 1`] = `
<c-simple-tooltip-stub
  content="<span class=\\"pre-wrap\\">Automatic instruction <strong>instruction</strong> is failed</span>"
  top=""
>
  <i
    aria-hidden="true"
    class="v-icon notranslate instruction-icon material-icons theme--light instruction-icon--failed"
    style="font-size: 22px;"
  >
    assignment
  </i>
</c-simple-tooltip-stub>
`;

exports[`alarms-list-row-instructions-icon Renders \`alarms-list-row-instructions-icon\` with running manual instruction 1`] = `
<c-simple-tooltip-stub
  content="<span class=\\"pre-wrap\\">Manual instruction <strong>instruction</strong> in progress</span>"
  top=""
>
  <span
    aria-hidden="true"
    class="v-icon notranslate instruction-icon theme--light blinking instruction-icon--dotted"
    style="font-size: 22px; height: 22px; width: 22px;"
  >
    <svg
      class="v-icon__component theme--light"
      fill="none"
      style="font-size: 22px; height: 22px; width: 22px;"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0_8821_52891)"
      >
        <path
          d="M19 3H14.82C14.4 1.84 13.3 1 12 1C10.7 1 9.6 1.84 9.18 3H5C3.9 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1
      21 21 20.1 21 19V5C21 3.9 20.1 3 19 3ZM12 5C11.45 5 11 4.55 11 4C11 3.45 11.45 3 12 3C12.55 3 13 3.45 13 4C13
      4.55 12.55 5 12 5Z"
          fill="currentColor"
        />
        <g
          clip-path="url(#clip1_8821_52891)"
        >
          <path
            d="M16.5 8.75V16C16.5 17.1 15.6 18 14.5 18H10.85C10.31 18 9.8 17.785 9.425 17.405L5.5 13.415C5.5 13.415 6.13
        12.8 6.15 12.79C6.26 12.695 6.395 12.645 6.545 12.645C6.655 12.645 6.755 12.675 6.845 12.725C6.865 12.73 9
        13.955 9 13.955V8C9 7.585 9.335 7.25 9.75 7.25C10.165 7.25 10.5 7.585 10.5 8V11.5H11V6.75C11 6.335 11.335
        6 11.75 6C12.165 6 12.5 6.335 12.5 6.75V11.5H13V7.25C13 6.835 13.335 6.5 13.75 6.5C14.165 6.5 14.5 6.835
        14.5 7.25V11.5H15V8.75C15 8.335 15.335 8 15.75 8C16.165 8 16.5 8.335 16.5 8.75Z"
            fill="white"
          />
        </g>
      </g>
    </svg>
  </span>
</c-simple-tooltip-stub>
`;

exports[`alarms-list-row-instructions-icon Renders \`alarms-list-row-instructions-icon\` with successful instruction 1`] = `
<c-simple-tooltip-stub
  content="<span class=\\"pre-wrap\\">Manual instruction <strong>instruction</strong> is successful</span>"
  top=""
>
  <span
    aria-hidden="true"
    class="v-icon notranslate instruction-icon theme--light instruction-icon--completed"
    style="font-size: 22px; height: 22px; width: 22px;"
  >
    <svg
      class="v-icon__component theme--light"
      fill="none"
      style="font-size: 22px; height: 22px; width: 22px;"
      viewBox="0 0 24 24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <g
        clip-path="url(#clip0_8821_52891)"
      >
        <path
          d="M19 3H14.82C14.4 1.84 13.3 1 12 1C10.7 1 9.6 1.84 9.18 3H5C3.9 3 3 3.9 3 5V19C3 20.1 3.9 21 5 21H19C20.1
      21 21 20.1 21 19V5C21 3.9 20.1 3 19 3ZM12 5C11.45 5 11 4.55 11 4C11 3.45 11.45 3 12 3C12.55 3 13 3.45 13 4C13
      4.55 12.55 5 12 5Z"
          fill="currentColor"
        />
        <g
          clip-path="url(#clip1_8821_52891)"
        >
          <path
            d="M16.5 8.75V16C16.5 17.1 15.6 18 14.5 18H10.85C10.31 18 9.8 17.785 9.425 17.405L5.5 13.415C5.5 13.415 6.13
        12.8 6.15 12.79C6.26 12.695 6.395 12.645 6.545 12.645C6.655 12.645 6.755 12.675 6.845 12.725C6.865 12.73 9
        13.955 9 13.955V8C9 7.585 9.335 7.25 9.75 7.25C10.165 7.25 10.5 7.585 10.5 8V11.5H11V6.75C11 6.335 11.335
        6 11.75 6C12.165 6 12.5 6.335 12.5 6.75V11.5H13V7.25C13 6.835 13.335 6.5 13.75 6.5C14.165 6.5 14.5 6.835
        14.5 7.25V11.5H15V8.75C15 8.335 15.335 8 15.75 8C16.165 8 16.5 8.335 16.5 8.75Z"
            fill="white"
          />
        </g>
      </g>
    </svg>
  </span>
</c-simple-tooltip-stub>
`;

exports[`alarms-list-row-instructions-icon Renders \`alarms-list-row-instructions-icon\` with withoutAnyExecution state 1`] = `
<c-simple-tooltip-stub
  content="<span class=\\"pre-wrap\\">Manual instruction wasn't executed</span>"
  top=""
>
  <span
    aria-hidden="true"
    class="v-icon notranslate instruction-icon theme--light instruction-icon--warning"
    style="font-size: 22px; height: 22px; width: 22px;"
  >
    <svg
      class="v-icon__component theme--light"
      fill="none"
      height="24"
      style="font-size: 22px; height: 22px; width: 22px;"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M12 1C13.3 1 14.4003 1.84 14.8203 3H19C20.1 3 21 3.9 21 5V19C21 20.1 20.1 21 19 21H5C3.9 21 3 20.1 3 19V5C3 3.9 3.9 3 5 3H9.17969C9.59969 1.84 10.7 1 12 1ZM12.0654 17.2666C11.7384 17.2667 11.4899 17.3516 11.3203 17.5205C11.1568 17.6894 11.0752 17.8965 11.0752 18.1416C11.0752 18.3759 11.1567 18.5781 11.3203 18.7471C11.4899 18.9158 11.7385 18.9999 12.0654 19C12.3863 19 12.6321 18.9157 12.8018 18.7471C12.9775 18.5781 13.0654 18.3759 13.0654 18.1416C13.0654 17.8964 12.9775 17.6894 12.8018 17.5205C12.6321 17.3517 12.3865 17.2666 12.0654 17.2666ZM10.2002 7L11.2568 15.542H12.7744L13.7998 7H10.2002ZM12 3C11.45 3 11 3.45 11 4C11 4.55 11.45 5 12 5C12.55 5 13 4.55 13 4C13 3.45 12.55 3 12 3Z"
        fill="currentColor"
      />
    </svg>
  </span>
</c-simple-tooltip-stub>
`;
